Added sample data. Added entities and dtos. Started parametrized search logic.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:h2:mem:property-view
 server.port=8092
 
 spring.liquibase.change-log=classpath:changelog.xml
+
+spring.jpa.show-sql=true
